--- a/style.css
+++ b/style.css
@@ -96,16 +96,19 @@ body {
 .pony{
   position: absolute;
   height: 150px;
-  z-index: -1;
-  transition: 0.5 ease all;
+  top: -55px;
+  transition: all 0.5s ease;
   transition-delay: 1.2s;
+  z-index: -1;
+ 
 }
 .pony.active {
-  transform: translateY(-200px);
+  top: -250px;
+  animation: sway 4s ease infinite forwards;
 }
-.pont.active2{
-  top: 0;
-  transition-delay: 0.2s;
+.pony.active2{
+  top: -55px;
+  transition-delay: 0.1s;
 }
 
 @keyframes Vibrate {
@@ -148,5 +151,16 @@ body {
   100% {
     transform: translateY(24px);
     scale: 0.7;
+  }
+}
+@keyframes sway {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(5deg);
+  }
+  100% {
+    transform: rotate(0deg);
   }
 }
