Added sleeping video link

--- a/style.css
+++ b/style.css
@@ -220,6 +220,10 @@ ion-icon:hover {
   opacity: 1;
   transform: translate3d(0, 0, 0);
 }
+
+.card ul li a{
+  color: white;
+}
 .rect:nth-child(1) .card {
   background-color: rgba(237, 1, 52, 0.8);
 }
