--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 }
 
 .rect:nth-child(5) {
-  background-color: #63a5d2;
+  background-color: rgb(255, 39, 226);
   height: 16%;
   width: 32%;
   left: 8%;
@@ -221,7 +221,7 @@ ion-icon:hover {
   transform: translate3d(0, 0, 0);
 }
 
-.card ul li a{
+.card ul li a {
   color: white;
 }
 .rect:nth-child(1) .card {
@@ -237,7 +237,7 @@ ion-icon:hover {
   background-color: rgba(254, 150, 2, 0.8);
 }
 .rect:nth-child(5) .card {
-  background-color: rgba(99, 165, 210, 0.8);
+  background-color: rgba(255, 39, 226, 0.8);
 }
 .rect:nth-child(6) .card {
   background-color: rgba(81, 172, 228, 0.8);
