--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -78,6 +78,16 @@ ion-icon:hover {
 img {
   width: 100%;
   height: 100%;
+  transition: all 0.5s ease;
+}
+
+.frame {
+  transition: all 0.5s ease;
+  box-shadow: 0px 15px 20px #1e1e1e;
+}
+.photo:hover {
+  cursor: pointer;
+  transform: rotateZ(2.5deg);
 }
 
 #next {
