--- a/catch/catch.css
+++ b/catch/catch.css
@@ -13,14 +13,13 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .player {
   position: relative;
   width: 10%;
   height: fit-content;
-  background-color: aqua;
   display: flex;
   justify-content: center;
 }
@@ -28,4 +27,27 @@ body {
   width: 150%;
   height: 100%;
   object-fit: cover;
+}
+
+.falling {
+  position: absolute;
+  display: none;
+  width: 5%;
+  aspect-ratio: 1/1;
+  background-color: red;
+  border: 1px solid black;
+}
+
+.info {
+  position: absolute;
+  left: calc(50% - 3.5vw);
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  width: 7vw;
+}
+
+.score {
+  font-size: 1.5rem;
+  text-align: center;
 }
