--- a/catch/catch.css
+++ b/catch/catch.css
@@ -18,9 +18,11 @@ body {
   text-decoration: none;
   transition: all 0.5s ease;
   text-decoration: none;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 .back a:hover {
   color: #faafc8;
+  text-shadow: 2px 2px 2px rgb(108, 31, 56);
 }
 .container {
   width: 80vw;
