--- a/garden/garden.css
+++ b/garden/garden.css
@@ -50,10 +50,12 @@ ion-icon:hover {
 }
 .garden {
   position: absolute;
-  top: 5vw;
+  /* top: 5vw; */
+  bottom: 0px;
   width: 100%;
-  height: 100%;
+  height: 90%;
   overflow: hidden;
+  background-color: red;
 }
 h1 {
   text-align: center;
@@ -83,9 +85,6 @@ h1 {
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 0%);
-}
-.garden .tulip {
-  bottom: 5vw;
 }
 .tulip__leaf--left,
 .tulip__leaf--right {
