--- a/skincare/skincare.css
+++ b/skincare/skincare.css
@@ -35,10 +35,11 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -100%);
   width: 200px;
   height: 200px;
   background-color: #fff;
+  transition: all 0.5s ease;
 }
 .products {
   position: absolute;
@@ -67,4 +68,18 @@ body {
 .products .product.active {
   background-color: #faafc8;
   transform: translateY(-75%) scale(1.2);
+}
+
+.cursor {
+  display: none;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border: 2px solid #faafc8;
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: 1000;
+  transition: all 0.1s ease;
+  transform: translate(-50%, -50%);
 }
