--- a/skincare/skincare.css
+++ b/skincare/skincare.css
@@ -27,7 +27,9 @@ body {
 .container {
   position: relative;
   margin: 0 auto;
-  background-color: red;
+  background-image: url(../assets/skincare/bathroom.png);
+  background-size: cover;
+  background-position: bottom;
   width: 100vw;
   height: 100vh;
 }
@@ -44,6 +46,7 @@ body {
 .products {
   position: absolute;
   display: flex;
+  align-items: baseline;
   justify-content: space-evenly;
   bottom: 0;
   width: 100vw;
@@ -51,35 +54,76 @@ body {
   background-color: cornsilk;
 }
 .products .product {
-  display: flex;
   height: 100%;
   width: 30px;
   transform: translateY(-50%);
-  background-color: blue;
   transition: all 0.5s ease;
-  box-shadow: 0 20px 10px rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+#sink {
+  height: 100px;
+  width: 150px;
+  background-image: url(../assets/skincare/sink.png);
+  background-position: center;
+  background-size: cover;
+}
+#towel {
+  height: 100px;
+  width: 150px;
+  background-image: url(../assets/skincare/towel.png);
+  background-position: center;
+  background-size: cover;
+}
+#cleanser {
+  width: 60px;
+  background-image: url(../assets/skincare/cleanser.webp);
+  background-position: center;
+  background-size: cover;
+}
+#toner {
+  width: 50px;
+  background-image: url(../assets/skincare/toner.png);
+  background-position: center;
+  background-size: cover;
+}
+#moisturiser {
+  height: 100px;
+  width: 100px;
+  background-image: url(../assets/skincare/moisturiser.png);
+  background-position: center;
+  background-size: cover;
+}
+#face-mask {
+  width: 105px;
+  background-image: url(../assets/skincare/face-mask-package.png);
+  background-position: center;
+  background-size: cover;
+}
+#lip-balm {
+  width: 50px;
+  background-image: url(../assets/skincare/lip-balm.webp);
+  background-position: center;
+  background-size: cover;
 }
 
 .products .product:hover {
-  background-color: #faafc8;
   transform: translateY(-75%) scale(1.2);
 }
 
 .products .product.active {
-  background-color: #faafc8;
   transform: translateY(-75%) scale(1.2);
 }
 
 .cursor {
-  display: none;
+  opacity: 0;
   position: absolute;
-  width: 20px;
-  height: 20px;
-  background-color: white;
-  border: 2px solid #faafc8;
-  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   pointer-events: none;
-  z-index: 1000;
+  z-index: 1;
   transition: all 0.1s ease;
   transform: translate(-50%, -50%);
 }
