--- a/skincare/skincare.css
+++ b/skincare/skincare.css
@@ -33,14 +33,30 @@ body {
   width: 100vw;
   height: 100vh;
 }
+.body {
+  position: absolute;
+  background-image: url(../assets/skincare/body.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-48%, -37%);
+  height: 30vh;
+  width: 500px;
+  transition: all 0.5s ease;
+}
 .face {
   position: absolute;
-  top: 50%;
+  background-image: url(../assets/skincare/face-1.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  bottom: 0;
   left: 50%;
-  transform: translate(-50%, -100%);
-  width: 200px;
-  height: 200px;
-  background-color: #fff;
+  transform: translate(-50%, -30%);
+  height: 80vh;
+  width: 500px;
   transition: all 0.5s ease;
 }
 .products {
