--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -82,6 +82,11 @@ img {
   height: 100%;
   transition: all 0.5s ease;
 }
+video{
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease;
+}
 
 .frame {
   transition: all 0.5s ease;
