--- a/hoon/hoon.css
+++ b/hoon/hoon.css
@@ -25,29 +25,127 @@ body {
   text-shadow: 2px 2px 2px rgb(108, 31, 56);
 }
 .timeSince {
-  position: absolute;
-  top: 45px;
-  left: calc(50% - 12.5vw);
+  position: relative;
+  margin: 50px auto;
   background-color: #fff;
   border-radius: 5px;
   color: #000;
-  font-size: 1.2em;
   padding: 10px;
   text-align: center;
-  width: 25vw;
+  width: fit-content;
   border: 2px solid #000;
 }
 .timeSince #time {
-  font-size: 3rem;
+  font-size: 1rem;
   font-weight: bolder;
 }
 .moneySaved {
+  position: relative;
+  margin: 50px auto;
   background-color: #fff;
   border-radius: 5px;
   color: #000;
-  font-size: 1.2em;
-  padding: 10px;
-  text-align: center;
-  width: 25vw;
+  width: fit-content;
   border: 2px solid #000;
+}
+.moneySaved h1,
+#money {
+  color: green;
+}
+
+.slide {
+  display: none;
+}
+img {
+  vertical-align: middle;
+  max-height: 500px;
+  max-width: 500px;
+}
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.2);
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+.numbertext {
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev,
+  .next,
+  .text {
+    font-size: 11px;
+  }
 }
