--- a/hoon/hoon.css
+++ b/hoon/hoon.css
@@ -40,6 +40,7 @@ body {
   font-weight: bolder;
 }
 .moneySaved {
+  padding: 10px;
   position: relative;
   margin: 50px auto;
   background-color: #fff;
@@ -55,17 +56,21 @@ body {
 
 .slide {
   display: none;
+  width: 100%;
+  height: 100%;
 }
 img {
-  vertical-align: middle;
-  max-height: 500px;
-  max-width: 500px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .slideshow-container {
-  max-width: 1000px;
+  height: 40vh;
+  width: 80vw;
+  overflow: hidden;
   position: relative;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .prev,
@@ -97,20 +102,16 @@ img {
 
 .text {
   color: #f2f2f2;
+  background-color: rgba(0, 0, 0, 0.2);
   font-size: 15px;
+  font-weight: bolder;
   padding: 8px 12px;
   position: absolute;
-  bottom: 8px;
+  bottom: 1px;
   width: 100%;
   text-align: center;
 }
 
-.numbertext {
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
 .dot {
   cursor: pointer;
   height: 15px;
